Update foundations/calculator: Add backspace
- Backspace enhancement to allow user to undo
their last input

--- a/foundations/calculator/index.html
+++ b/foundations/calculator/index.html
@@ -12,11 +12,12 @@
         <div class="display">
             <input type="text" id="display" disabled placeholder="0">
         </div>
-
+        
         <!-- Buttons -->
         <div class="buttons">
-            <!-- First Row: C button and / operator -->
+            <!-- First Row: C button, Backspace and / operator -->
             <button class="button clear" id="clear">C</button>
+            <button class="button backspace" id="backspace">➔</button>
             <button class="button operator" id="divide">/</button>
 
             <!-- Second Row: Numbers and Multiply operator -->
